cabal-version:      2.4
name:               convex-blockfrost-client
version:            0.1.0.0
synopsis:           Bindings to the blockfrost API (very basic)
bug-reports:        https://github.com/j-mueller/convex/issues
license:            Apache-2.0
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
category:           cardano

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
        Convex.Blockfrost
    hs-source-dirs: src
    build-depends:
        base >=4.14 && <5,
        text -any,
        wreq -any,
        bytestring -any,
        lens -any,
        http-client -any,
        http-types -any
