cabal-version:      2.4
name:               convex-muesli-core
version:            0.1.0.0
synopsis:           Types and functions for dealing with muesli orders
bug-reports:        https://github.com/j-mueller/convex/issues
license:            Apache-2.0
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
category:           cardano

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
        Convex.Muesli.Constants
        Convex.Muesli.KnownOrder
        Convex.Muesli.Match
    hs-source-dirs: src
    build-depends:
        convex-node-client -any
    build-depends:
        cardano-api -any,
        cardano-slotting -any,
        cardano-ledger-alonzo -any,
        cardano-ledger-shelley -any,
        cardano-ledger-core -any,
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        serialise -any,
        cardano-binary -any
    build-depends:
        order-validator -any
    build-depends:
        base >=4.14 && <5,
        containers -any,
        text -any,
        bytestring -any,
        validation -any,
        base16-bytestring -any
