cabal-version:      2.4
name:               convex-muesli-data-export
version:            0.1.0.0
synopsis:           Export Muesli orders to CSV
bug-reports:        https://github.com/j-mueller/convex/issues
license:            Apache-2.0
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
category:           cardano

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
        Convex.Muesli.Export.Cli
        Convex.Muesli.Export.Config
        Convex.Muesli.Export.CSV
        Convex.Muesli.Export.NodeClient
        Convex.Muesli.Export.Transaction
    hs-source-dirs: src
    build-depends:
        convex-node-client -any,
        convex-muesli-core -any
    build-depends:
        cardano-api -any,
        cardano-slotting -any,
        cardano-ledger-core -any,
    build-depends:
        base >=4.14 && <5,
        containers -any,
        transformers -any,
        time -any,
        aeson -any,
        text -any,
        optparse-applicative -any

executable convex-muesli-data-export
    import: lang
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        convex-muesli-data-export
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -threaded -rtsopts -O2