cabal-version:      2.4
name:               convex-options
version:            0.1.0.0
synopsis:           Plutus implementation of option contracts
bug-reports:        https://github.com/j-mueller/convex/issues
license:            Apache-2.0
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
category:           cardano

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
        Convex.Options.OnChain.MintingPolicy
        Convex.Options.OnChain.Option
        Convex.Options.OnChain.Scripts
        Convex.Options.OnChain.Types
        Convex.Options.OffChain
    hs-source-dirs: src
    build-depends:
        cardano-api -any,
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        plutus-tx-plugin -any
    build-depends:
        base >=4.14 && <5,
        aeson -any,
        serialise -any,
        bytestring -any,
        cooked-validators -any
    ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-specialise

test-suite convex-options-test
  import:               lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:     test
  other-modules:
    Convex.Options.Generators
    Convex.Options.Test
  build-depends:
    base >=4.14 && <5
    , tasty -any
    , convex-options -any
    , plutus-ledger-api -any
    , tasty-quickcheck -any
    , cooked-validators -any
    , QuickCheck -any
