cabal-version:      2.4
name:               convex-prices
version:            0.1.0.0
synopsis:           Calculating the prices of cardano assets, and assorted statistics 
bug-reports:        https://github.com/j-mueller/convex/issues
license:            Apache-2.0
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
category:           cardano

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables MultiParamTypeClasses
                        DeriveGeneric StandaloneDeriving DeriveLift FlexibleContexts
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
    ghc-options: -Wall -Wnoncanonical-monad-instances -Wunused-packages
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

library
    import: lang
    exposed-modules:
        Convex.Prices.AssetPrices
        Convex.Prices.Cli
        Convex.Prices.Config
        Convex.Prices.Measures
        Convex.Prices.NodeClient
        Convex.Prices.Webserver
        Convex.Prices
    hs-source-dirs: src
    build-depends:
        cardano-api -any
    build-depends:
        convex-muesli-core -any,
        convex-node-client -any
    build-depends:
        base >=4.14 && <5,
        containers -any,
        text -any,
        aeson -any,
        lens -any,
        time -any,
        servant -any,
        servant-server -any,
        stm -any,
        warp -any,
        optparse-applicative -any,
        transformers -any

executable convex-prices
    import: lang
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        convex-prices
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
      -threaded -rtsopts -O2
